--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   syncfusion_flutter_datepicker: ^20.2.46
   image_picker: ^0.8.6
   shared_preferences: ^2.0.15
-
+  intl_phone_number_input: ^0.7.1
+  lottie: ^1.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,6 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/
    - assets/images/
    - assets/icons/
 
