--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl_phone_number_input: ^0.7.1
   lottie: ^1.4.3
   lazy_load_scrollview: ^1.3.0
+  scrollable_positioned_list:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
