--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   lazy_load_scrollview: ^1.3.0
   scrollable_positioned_list:
   flutter_html: ^3.0.0-alpha.3
+  share_plus: ^6.3.0
+  path_provider: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
