--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   syncfusion_flutter_datepicker: ^27.2.2
   image_picker: ^1.1.2
   shared_preferences: ^2.0.15
-#  intl_phone_number_input: ^0.7.1
-  intl_phone_number_input:
-    git:
-      url: https://github.com/Shahidbangash/intl_phone_number_input.git
-      ref: develop
+
+# todo: for android
+  intl_phone_number_input: ^0.7.1
+# todo: for ios
+#  intl_phone_number_input:
+#    git:
+#      url: https://github.com/Shahidbangash/intl_phone_number_input.git
+#      ref: develop
+
   lottie: ^3.1.3
   lazy_load_scrollview: ^1.3.0
   scrollable_positioned_list:
