--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+11
+version: 1.1.1+12
 
 
 environment:
@@ -39,6 +39,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^27.2.2
   image_picker: ^1.1.2
   shared_preferences: ^2.0.15
+  url_launcher: ^6.3.1
 
 # todo: for android
   intl_phone_number_input: ^0.7.1
@@ -110,6 +111,14 @@ flutter:
    - family: D-DIN-PRO
      fonts:
        - asset: fonts/D-DIN-PRO.otf
+
+   - family: bankgothic
+     fonts:
+       - asset: fonts/bankgothic-md-bt/Bank Gothic Light Regular.otf
+
+   - family: graphik
+     fonts:
+       - asset: fonts/graphik-arabic/GraphikArabic-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
